# RustyVue

./: README.md  docker-compose.yml
back/: .env  Cargo.toml  dockerfile
back/migrations/2023-04-05-152143_add_user/: up.sql
back/migrations/2023-04-05-153443_add_session/: up.sql
back/src/: config.rs  error.rs  main.rs  model.rs
back/src/auth/: mod.rs
back/src/config/: database.rs  server.rs
back/src/controller/: auth.rs  post.rs  user.rs
back/src/database/: mod.rs  schema.rs
back/src/dto/: post.rs  user.rs
back/src/model/: post.rs  user.rs
back/src/repository/: post.rs  user.rs
back/src/router/: auth.rs  mod.rs  post.rs  user.rs
back/src/service/: auth.rs  user.rs
back/src/utils/: mod.rs
