[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
env_logger = "0.10.0"
log = "0.4.17"
dotenvy = "0.15.7"
envy = "0.4.2"
thiserror = "1.0.40"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"



[profile.release]
opt-level = "z"
strip = true